// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button 1`] = `
<div>
  <button
    class="button base work primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a Button that is just an icon 1`] = `
<div>
  <button
    aria-label="Person"
    class="button base onlyIcon work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="user"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M16 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-2 0a2 2 0 1 0-4 0 2 2 0 0 0 4 0Z"
      />
      <path
        class=""
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 8c1.47 0 2.846-.396 4.03-1.087-2.079-1.865-3.826-2.087-5.175-1.766-1.134.27-2.138.955-2.951 1.726A7.963 7.963 0 0 0 12 20Zm-1.608-4.799c2.206-.525 4.682.056 7.245 2.475a8 8 0 1 0-11.322-.047c1.018-1.016 2.396-2.028 4.077-2.428Z"
      />
    </svg>
    <span
      class="base extraBold base base"
    />
  </button>
</div>
`;

exports[`renders a Button with a link and opens in new tab 1`] = `
<div>
  <a
    class="button base work primary"
    href="💩.com"
    target="_blank"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </a>
</div>
`;

exports[`renders a Button with a loading state 1`] = `
<div>
  <button
    class="button base work primary loading"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Adding
    </span>
  </button>
</div>
`;

exports[`renders a Button with an icon 1`] = `
<div>
  <button
    class="button base hasIconAndLabel work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="add"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M12 3a1 1 0 0 0-1 1v7H4a1 1 0 1 0 0 2h7v7a1 1 0 1 0 2 0v-7h7a1 1 0 1 0 0-2h-7V4a1 1 0 0 0-1-1Z"
      />
    </svg>
    <span
      class="base extraBold base base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a Button with an icon on the right 1`] = `
<div>
  <button
    class="button base hasIconAndLabel iconOnRight work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="add"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M12 3a1 1 0 0 0-1 1v7H4a1 1 0 1 0 0 2h7v7a1 1 0 1 0 2 0v-7h7a1 1 0 1 0 0-2h-7V4a1 1 0 0 0-1-1Z"
      />
    </svg>
    <span
      class="base extraBold base base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a Link as a Button for routing 1`] = `
<div>
  <a
    class="button base work primary"
    href="/jobber"
  >
    <span
      class="base extraBold base base"
    >
      Adding
    </span>
  </a>
</div>
`;

exports[`renders a destructuve Button 1`] = `
<div>
  <button
    class="button base destructive primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a disabled Button 1`] = `
<div>
  <button
    class="button base work primary disabled"
    disabled=""
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a large Button 1`] = `
<div>
  <button
    class="button large work primary"
    type="button"
  >
    <span
      class="base extraBold large base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a learning Button 1`] = `
<div>
  <button
    class="button base learning primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a secondary Button 1`] = `
<div>
  <button
    class="button base work secondary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a small Button 1`] = `
<div>
  <button
    class="button small work primary"
    type="button"
  >
    <span
      class="base extraBold small base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a subtle Button 1`] = `
<div>
  <button
    class="button base subtle primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a tertiary Button 1`] = `
<div>
  <button
    class="button base work tertiary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;
